<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nano_apps" />

        <Button
            android:id="@+id/button1"
            style="@style/button_style"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            style="@style/button_style"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            style="@style/button_style"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            style="@style/button_style"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            style="@style/button_style"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            style="@style/button_style"
            android:text="@string/button6" />

    </LinearLayout>
</ScrollView>
